kubernetes-orchestration/gke/resources/candidate-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate-service-lb
spec:
  type: LoadBalancer
  selector:
    app-label: candidate-app
  ports:
    - port: 8080
      targetPort: 8080
