kubernetes-orchestration/gke/resources/job-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-service-lb
spec:
  type: LoadBalancer
  selector:
    app-label: job-app
  ports:
    - port: 8080
      targetPort: 8080
