kubernetes-orchestration/gke/resources/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - http:
        paths:
          - path: /candidates
            pathType: Prefix
            backend:
              service:
                name: candidate-service
                port:
                  number: 8080
          - path: /jobs
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
